Fix Industry label wrapping and sync with Supplier

--- a/enrolment/static/sass/company-profile-details.scss
+++ b/enrolment/static/sass/company-profile-details.scss
@@ -166,7 +166,8 @@
   padding: 22px;
 }
 
-.stone-label {
+.stone-label,
+.stone-label:focus {
   background: $stone;
   border-radius: 6px;
   color: $mid-grey;
